--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-v5": "^1.4.0",
+    "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
     "swiper": "^8.4.5",
     "web-vitals": "^2.1.4"
   },
